@@ -1,6 +1,11 @@
 package uk.gov.hmcts.reform.hmc.utils;
 
-import org.assertj.core.util.Lists;
+import uk.gov.hmcts.reform.hmc.data.ActualAttendeeIndividualDetailEntity;
+import uk.gov.hmcts.reform.hmc.data.ActualHearingDayEntity;
+import uk.gov.hmcts.reform.hmc.data.ActualHearingDayPausesEntity;
+import uk.gov.hmcts.reform.hmc.data.ActualHearingEntity;
+import uk.gov.hmcts.reform.hmc.data.ActualHearingPartyEntity;
+import uk.gov.hmcts.reform.hmc.data.ActualPartyRelationshipDetailEntity;
 import uk.gov.hmcts.reform.hmc.data.CaseCategoriesEntity;
 import uk.gov.hmcts.reform.hmc.data.CaseHearingRequestEntity;
 import uk.gov.hmcts.reform.hmc.data.HearingAttendeeDetailsEntity;
@@ -10,12 +15,15 @@ import uk.gov.hmcts.reform.hmc.data.HearingEntity;
 import uk.gov.hmcts.reform.hmc.data.HearingPartyEntity;
 import uk.gov.hmcts.reform.hmc.data.HearingResponseEntity;
 import uk.gov.hmcts.reform.hmc.data.IndividualDetailEntity;
+import uk.gov.hmcts.reform.hmc.data.LinkedGroupDetails;
 import uk.gov.hmcts.reform.hmc.data.NonStandardDurationsEntity;
 import uk.gov.hmcts.reform.hmc.data.OrganisationDetailEntity;
 import uk.gov.hmcts.reform.hmc.data.PanelRequirementsEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredFacilitiesEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredLocationsEntity;
 import uk.gov.hmcts.reform.hmc.data.UnavailabilityEntity;
+import uk.gov.hmcts.reform.hmc.domain.model.enums.ListAssistCaseStatus;
+import uk.gov.hmcts.reform.hmc.domain.model.enums.ListingStatus;
 import uk.gov.hmcts.reform.hmc.model.ActualHearingDay;
 import uk.gov.hmcts.reform.hmc.model.ActualHearingDayParties;
 import uk.gov.hmcts.reform.hmc.model.ActualHearingDayPartyDetail;
@@ -35,27 +43,31 @@ import uk.gov.hmcts.reform.hmc.model.HearingDaySchedule;
 import uk.gov.hmcts.reform.hmc.model.HearingDetails;
 import uk.gov.hmcts.reform.hmc.model.HearingLocation;
 import uk.gov.hmcts.reform.hmc.model.HearingResponse;
+import uk.gov.hmcts.reform.hmc.model.HearingResultType;
 import uk.gov.hmcts.reform.hmc.model.HearingWindow;
 import uk.gov.hmcts.reform.hmc.model.IndividualDetails;
-import uk.gov.hmcts.reform.hmc.model.LocationId;
+import uk.gov.hmcts.reform.hmc.model.LocationType;
 import uk.gov.hmcts.reform.hmc.model.OrganisationDetails;
+import uk.gov.hmcts.reform.hmc.model.PanelPreference;
 import uk.gov.hmcts.reform.hmc.model.PanelRequirements;
 import uk.gov.hmcts.reform.hmc.model.PartyDetails;
 import uk.gov.hmcts.reform.hmc.model.PartyType;
 import uk.gov.hmcts.reform.hmc.model.RelatedParty;
 import uk.gov.hmcts.reform.hmc.model.RequestDetails;
+import uk.gov.hmcts.reform.hmc.model.UnavailabilityDow;
+import uk.gov.hmcts.reform.hmc.model.UnavailabilityRanges;
 import uk.gov.hmcts.reform.hmc.model.UpdateHearingRequest;
-import uk.gov.hmcts.reform.hmc.model.UpdateRequestDetails;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 import static uk.gov.hmcts.reform.hmc.constants.Constants.CANCELLATION_REQUESTED;
-import static uk.gov.hmcts.reform.hmc.constants.Constants.HEARING_STATUS;
+import static uk.gov.hmcts.reform.hmc.constants.Constants.POST_HEARING_STATUS;
 import static uk.gov.hmcts.reform.hmc.constants.Constants.UNAVAILABILITY_DOW_TYPE;
 
 public class TestingUtil {
@@ -66,9 +78,7 @@ public class TestingUtil {
     }
 
     public static RequestDetails requestDetails() {
-        RequestDetails requestDetails = new RequestDetails();
-        requestDetails.setRequestTimeStamp(LocalDateTime.now());
-        return requestDetails;
+        return new RequestDetails();
     }
 
     public static HearingDetails hearingDetails() {
@@ -77,26 +87,28 @@ public class TestingUtil {
         hearingDetails.setAutoListFlag(true);
         hearingDetails.setHearingType("Some hearing type");
         HearingWindow hearingWindow = new HearingWindow();
-        hearingWindow.setHearingWindowEndDateRange(LocalDate.parse("2017-03-01"));
-        hearingWindow.setHearingWindowStartDateRange(LocalDate.parse("2017-03-01"));
+        hearingWindow.setDateRangeEnd(LocalDate.parse("2017-03-01"));
+        hearingWindow.setDateRangeStart(LocalDate.parse("2017-03-01"));
         hearingDetails.setHearingWindow(hearingWindow);
         hearingDetails.setDuration(0);
         hearingDetails.setNonStandardHearingDurationReasons(Arrays.asList("First reason", "Second reason"));
         hearingDetails.setHearingPriorityType("Priority type");
+        hearingDetails.setHearingIsLinkedFlag(Boolean.TRUE);
         HearingLocation location1 = new HearingLocation();
-        location1.setLocationId("COURT");
-        location1.setLocationType("Location type");
+        location1.setLocationType(LocationType.CLUSTER.getLabel());
+        location1.setLocationId("Location Id");
         List<HearingLocation> hearingLocations = new ArrayList<>();
         hearingLocations.add(location1);
         hearingDetails.setHearingLocations(hearingLocations);
+        hearingDetails.setFacilitiesRequired(Arrays.asList("facility1", "facility2"));
         return hearingDetails;
     }
 
     public static PanelRequirements panelRequirements() {
         PanelRequirements panelRequirements = new PanelRequirements();
-        panelRequirements.setRoleType(Arrays.asList("RoleType1"));
-        panelRequirements.setAuthorisationTypes(Arrays.asList("AuthorisationType1"));
-        panelRequirements.setAuthorisationSubType(Arrays.asList("AuthorisationSubType2"));
+        panelRequirements.setRoleType(List.of("RoleType1"));
+        panelRequirements.setAuthorisationTypes(List.of("AuthorisationType1"));
+        panelRequirements.setAuthorisationSubType(List.of("AuthorisationSubType2"));
         return panelRequirements;
     }
 
@@ -114,7 +126,7 @@ public class TestingUtil {
 
     public static RequiredLocationsEntity locationEntity() {
         RequiredLocationsEntity requiredLocationsEntity = new RequiredLocationsEntity();
-        requiredLocationsEntity.setLocationId(LocationId.CLUSTER);
+        requiredLocationsEntity.setLocationLevelType(LocationType.CLUSTER);
         return requiredLocationsEntity;
     }
 
@@ -154,7 +166,6 @@ public class TestingUtil {
         CaseDetails caseDetails = new CaseDetails();
         caseDetails.setHmctsServiceCode("ABA1");
         caseDetails.setCaseRef(CASE_REFERENCE);
-        caseDetails.setRequestTimeStamp(LocalDateTime.parse("2021-08-10T12:20:00"));
         caseDetails.setCaseDeepLink("https://www.google.com");
         caseDetails.setHmctsInternalCaseName("Internal case name");
         caseDetails.setPublicCaseName("Public case name");
@@ -181,15 +192,14 @@ public class TestingUtil {
         partyDetails2.setPartyType("IND");
         partyDetails2.setPartyRole("DEF2");
 
-        List<PartyDetails> partyDetails = Lists.newArrayList(partyDetails1, partyDetails2);
-        return partyDetails;
+        return List.of(partyDetails1, partyDetails2);
     }
 
     public static List<CaseCategoriesEntity> caseCategoriesEntities() {
         CaseCategoriesEntity caseCategoriesEntity = new CaseCategoriesEntity();
         caseCategoriesEntity.setCategoryType(CaseCategoryType.CASETYPE);
         caseCategoriesEntity.setCaseCategoryValue("PROBATE");
-        return Arrays.asList(caseCategoriesEntity);
+        return List.of(caseCategoriesEntity);
     }
 
     public static IndividualDetails individualDetails() {
@@ -197,6 +207,8 @@ public class TestingUtil {
         individualDetails.setTitle("Mr");
         individualDetails.setFirstName("firstName");
         individualDetails.setLastName("lastName");
+        individualDetails.setCustodyStatus("custodyStatus");
+        individualDetails.setOtherReasonableAdjustmentDetails("otherReason");
         List<RelatedParty> relatedParties = new ArrayList<>();
         RelatedParty relatedParty1 = new RelatedParty();
         relatedParty1.setRelatedPartyID("P1");
@@ -241,9 +253,10 @@ public class TestingUtil {
     public static HearingEntity hearingEntity() {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(1L);
-        hearingEntity.setStatus(HEARING_STATUS);
+        hearingEntity.setStatus(POST_HEARING_STATUS);
+        hearingEntity.setIsLinkedFlag(Boolean.TRUE);
         CaseHearingRequestEntity caseHearingRequestEntity = caseHearingRequestEntity();
-        hearingEntity.setCaseHearingRequest(caseHearingRequestEntity);
+        hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntity));
         return hearingEntity;
     }
 
@@ -255,14 +268,13 @@ public class TestingUtil {
         entity.setHearingPriorityType("Priority type");
         entity.setHmctsServiceCode("ABA1");
         entity.setCaseReference("1111222233334444");
-        entity.setHearingRequestReceivedDateTime(LocalDateTime.parse("2000-08-10T12:20:00"));
         entity.setCaseUrlContextPath("https://www.google.com");
         entity.setHmctsInternalCaseName("Internal case name");
         entity.setOwningLocationId("CMLC123");
         entity.setCaseRestrictedFlag(true);
         entity.setCaseSlaStartDate(LocalDate.parse("2020-08-10"));
         entity.setVersionNumber(1);
-        entity.setRequestTimeStamp(LocalDateTime.parse("2020-08-10T12:20:00"));
+        entity.setHearingRequestReceivedDateTime(LocalDateTime.parse("2020-08-10T12:20:00"));
         return entity;
 
     }
@@ -294,23 +306,18 @@ public class TestingUtil {
     }
 
     public static UpdateHearingRequest updateHearingRequest() {
+        return updateHearingRequest(1);
+    }
+
+    public static UpdateHearingRequest updateHearingRequest(int version) {
         UpdateHearingRequest request = new UpdateHearingRequest();
         request.setHearingDetails(hearingDetails());
         request.setCaseDetails(caseDetails());
         request.getHearingDetails().setPanelRequirements(TestingUtil.panelRequirements());
-        UpdateRequestDetails requestDetails = new UpdateRequestDetails();
-        requestDetails.setRequestTimeStamp(LocalDateTime.now());
-        requestDetails.setVersionNumber(1);
+        RequestDetails requestDetails = new RequestDetails();
+        requestDetails.setVersionNumber(version);
         request.setRequestDetails(requestDetails);
         return request;
-    }
-
-    public static HearingEntity deleteHearingEntity() {
-        HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(1L);
-        hearingEntity.setCaseHearingRequest(caseHearingRequestEntity());
-        hearingEntity.setStatus(CANCELLATION_REQUESTED);
-        return hearingEntity;
     }
 
     public static HearingResponse deleteHearingResponse() {
@@ -325,7 +332,7 @@ public class TestingUtil {
     public static GetHearingsResponse getHearingsResponseWhenDataIsPresent(String caseRef) {
         GetHearingsResponse getHearingsResponse = new GetHearingsResponse();
         getHearingsResponse.setCaseRef(caseRef);
-        getHearingsResponse.setHmctsServiceId("AB1A");
+        getHearingsResponse.setHmctsServiceCode("AB1A");
         CaseHearing caseHearing = new CaseHearing();
         caseHearing.setHearingId(2000000000L);
         caseHearing.setHearingRequestDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
@@ -334,6 +341,7 @@ public class TestingUtil {
         caseHearing.setLastResponseReceivedDateTime(LocalDateTime.parse("2020-08-10T12:20:00"));
         caseHearing.setListAssistCaseStatus("EXCEPTION");
         caseHearing.setHearingListingStatus("listingStatus");
+        caseHearing.setHearingIsLinkedFlag(Boolean.TRUE);
         HearingDaySchedule schedule = new HearingDaySchedule();
         schedule.setHearingStartDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
         schedule.setHearingEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
@@ -347,11 +355,506 @@ public class TestingUtil {
         List<Attendee> attendeeList = new ArrayList<>();
         attendeeList.add(attendee);
         schedule.setAttendees(attendeeList);
-        caseHearing.setHearingDaySchedule(Arrays.asList(schedule));
+        caseHearing.setHearingDaySchedule(List.of(schedule));
         List<CaseHearing> caseHearingList = new ArrayList<>();
         caseHearingList.add(caseHearing);
         getHearingsResponse.setCaseHearings(caseHearingList);
         return getHearingsResponse;
+    }
+
+    public static CaseHearingRequestEntity getCaseHearingsEntities() {
+        CaseHearingRequestEntity entity = new CaseHearingRequestEntity();
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(2000000000L);
+        hearingEntity.setIsLinkedFlag(Boolean.TRUE);
+        entity.setCaseHearingID(2000000000L);
+        hearingEntity.setStatus("HEARING_REQUESTED");
+        entity.setVersionNumber(1);
+        hearingEntity.setIsLinkedFlag(true);
+        hearingEntity.setLinkedGroupDetails(getLinkedGroupDetails());
+        entity.setHearing(hearingEntity);
+        entity.setHmctsServiceCode("ABA1");
+        entity.setCaseReference("12345");
+        entity.setHearingType("Some hearing type");
+        entity.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
+        entity.getHearing().getHearingResponses().get(0)
+            .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
+        return entity;
+    }
+
+    public static LinkedGroupDetails getLinkedGroupDetails() {
+        LinkedGroupDetails linkedGroupDetails = new LinkedGroupDetails();
+        linkedGroupDetails.setLinkedGroupId(1L);
+        linkedGroupDetails.setRequestId("requestId");
+        linkedGroupDetails.setLinkedComments("linkComments");
+        linkedGroupDetails.setRequestName("requestName");
+        return linkedGroupDetails;
+    }
+
+    public static List<NonStandardDurationsEntity> getNonStandardDurationEntities() {
+        NonStandardDurationsEntity nonStandardDurationsEntity = new NonStandardDurationsEntity();
+        nonStandardDurationsEntity.setNonStandardHearingDurationReasonType("Reason");
+        return List.of(nonStandardDurationsEntity);
+    }
+
+    public static List<CaseHearingRequestEntity> getCaseHearingsEntitiesWithStatus() {
+        List<CaseHearingRequestEntity> entities = new ArrayList<>();
+        getFirstEntity(entities);
+        getSecondEntity(entities);
+        return entities;
+    }
+
+    private static void getFirstEntity(List<CaseHearingRequestEntity> entities) {
+        CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(2000000000L);
+        entity1.setCaseHearingID(2000000000L);
+        hearingEntity.setStatus("HEARING_REQUESTED");
+        entity1.setHearing(hearingEntity);
+        entity1.setHmctsServiceCode("ABA1");
+        entity1.setCaseReference("12345");
+        entity1.setHearingType("Some hearing type");
+        entity1.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
+        entity1.getHearing().getHearingResponses().get(0)
+            .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
+        entities.add(entity1);
+    }
+
+    private static void getSecondEntity(List<CaseHearingRequestEntity> entities) {
+        CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(2000000001L);
+        entity1.setCaseHearingID(2000000001L);
+        hearingEntity.setStatus("HEARING_UPDATED");
+        entity1.setHearing(hearingEntity);
+        entity1.setHmctsServiceCode("ABA1");
+        entity1.setCaseReference("4567");
+        entity1.setHearingType("Some hearing type");
+        entity1.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
+        entity1.getHearing().getHearingResponses().get(0)
+            .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
+        entities.add(entity1);
+    }
+
+    public static HearingResponseEntity hearingResponseEntities() {
+        HearingResponseEntity entity = new HearingResponseEntity();
+        entity.setRequestVersion(1);
+        entity.setRequestTimeStamp(LocalDateTime.parse("2020-08-10T12:20:00"));
+        entity.setHearingResponseId(2L);
+        entity.setListingStatus("listingStatus");
+        entity.setListingCaseStatus("Case_listingStatus");
+        entity.setCancellationReasonType("Cancelled Reason 1");
+        return entity;
+    }
+
+    public static HearingDayDetailsEntity hearingDayDetailsEntities() {
+        HearingDayDetailsEntity entity = new HearingDayDetailsEntity();
+        entity.setStartDateTime(LocalDateTime.parse("2020-08-10T12:20:00"));
+        entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
+        entity.setVenueId("venue1");
+        entity.setRoomId("room1");
+        entity.setListAssistSessionId("session1");
+        entity.setHearingAttendeeDetails(List.of(hearingAttendeeDetailsEntity()));
+        entity.setHearingDayPanel(List.of(hearingDayPanelEntities()));
+        return entity;
+    }
+
+    public static HearingDayPanelEntity hearingDayPanelEntities() {
+        HearingDayPanelEntity entity = new HearingDayPanelEntity();
+        entity.setPanelUserId("PanelUser1");
+        entity.setIsPresiding(false);
+        return entity;
+    }
+
+    public static HearingAttendeeDetailsEntity hearingAttendeeDetailsEntity() {
+        HearingAttendeeDetailsEntity entity = new HearingAttendeeDetailsEntity();
+        entity.setPartyId("Party1");
+        entity.setPartySubChannelType("SubChannel1");
+        return entity;
+    }
+
+    public static GetHearingsResponse getHearingsResponseWhenNoData(String caseRef) {
+        GetHearingsResponse getHearingsResponse = new GetHearingsResponse();
+        getHearingsResponse.setCaseRef(caseRef);
+        getHearingsResponse.setCaseHearings(new ArrayList<>());
+        return getHearingsResponse;
+    }
+
+    public static HearingEntity getCaseHearingsEntity(PartyType partyType) {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(2000000000L);
+        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
+        if (partyType.getLabel() == PartyType.IND.getLabel()) {
+            hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
+        } else {
+            hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyInd()));
+        }
+        hearingEntity.getCaseHearingRequests().get(0).setVersionNumber(1);
+        return hearingEntity;
+    }
+
+    public static HearingEntity getCaseHearingsEntity() {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(2000000000L);
+        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
+        hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
+
+        hearingEntity.getCaseHearingRequests().get(0).setVersionNumber(1);
+        hearingEntity.getCaseHearingRequests().get(0).setHearingParties(Arrays.asList(hearingPartyEntityOrg()));
+        return hearingEntity;
+    }
+
+    public static HearingEntity getHearingsEntityForHearingActuals(String status) {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(2000000000L);
+        hearingEntity.setStatus(status);
+        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
+        hearingEntity.getCaseHearingRequests().add(caseHearingRequestEntityWithPartyOrg());
+
+        CaseHearingRequestEntity caseHearingRequestEntity = hearingEntity.getLatestCaseHearingRequest();
+        caseHearingRequestEntity.setVersionNumber(1);
+        caseHearingRequestEntity.setHearingType("hearingType");
+        caseHearingRequestEntity.setHmctsServiceCode("serviceCode");
+        caseHearingRequestEntity.setCaseReference("caseRef");
+        caseHearingRequestEntity.setExternalCaseReference("extCaseRef");
+        caseHearingRequestEntity.setCaseUrlContextPath("contextPath");
+        caseHearingRequestEntity.setHmctsInternalCaseName("caseName");
+        caseHearingRequestEntity.setPublicCaseName("publicCaseName");
+        caseHearingRequestEntity.setAdditionalSecurityRequiredFlag(true);
+        caseHearingRequestEntity.setInterpreterBookingRequiredFlag(true);
+        caseHearingRequestEntity.setOwningLocationId("locationId");
+        caseHearingRequestEntity.setCaseRestrictedFlag(true);
+        caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 01, 01));
+        caseHearingRequestEntity.setHearingParties(Arrays.asList(hearingPartyEntityOrg()));
+        caseHearingRequestEntity.setCaseCategories(caseCategoriesEntities());
+
+        hearingEntity.getHearingResponses().get(0).setActualHearingEntity(actualHearingEntity(PartyType.ORG));
+        return hearingEntity;
+    }
+
+    public static HearingEntity getHearingsEntityForHearingActualsIndividual() {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(2000000000L);
+        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
+        hearingEntity.getCaseHearingRequests().add(caseHearingRequestEntityWithPartyInd());
+
+        CaseHearingRequestEntity caseHearingRequestEntity = hearingEntity.getLatestCaseHearingRequest();
+        caseHearingRequestEntity.setVersionNumber(1);
+        caseHearingRequestEntity.setHearingType("hearingType");
+        caseHearingRequestEntity.setHmctsServiceCode("serviceCode");
+        caseHearingRequestEntity.setCaseReference("caseRef");
+        caseHearingRequestEntity.setExternalCaseReference("extCaseRef");
+        caseHearingRequestEntity.setCaseUrlContextPath("contextPath");
+        caseHearingRequestEntity.setHmctsInternalCaseName("caseName");
+        caseHearingRequestEntity.setPublicCaseName("publicCaseName");
+        caseHearingRequestEntity.setAdditionalSecurityRequiredFlag(true);
+        caseHearingRequestEntity.setInterpreterBookingRequiredFlag(true);
+        caseHearingRequestEntity.setOwningLocationId("locationId");
+        caseHearingRequestEntity.setCaseRestrictedFlag(true);
+        caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 01, 01));
+        caseHearingRequestEntity.setHearingParties(Arrays.asList(hearingPartyEntityInd()));
+        caseHearingRequestEntity.setCaseCategories(caseCategoriesEntities());
+
+        hearingEntity.getHearingResponses().get(0).setActualHearingEntity(actualHearingEntity(PartyType.IND));
+        return hearingEntity;
+    }
+
+    public static ActualHearingEntity actualHearingEntity(PartyType partyType) {
+        ActualHearingEntity entity = new ActualHearingEntity();
+        entity.setActualHearingType("hearingType");
+        entity.setHearingResultType(HearingResultType.ADJOURNED);
+        entity.setHearingResultReasonType("resultReason");
+        entity.setHearingResultDate(LocalDate.of(2000, 01, 01));
+        entity.setActualHearingDay(Arrays.asList(actualHearingDayEntity(partyType)));
+        entity.setActualHearingIsFinalFlag(true);
+        return entity;
+    }
+
+    public static ActualPartyRelationshipDetailEntity actualPartyRelationshipDetailEntity(
+        ActualHearingPartyEntity actualHearingPartyEntity) {
+        ActualPartyRelationshipDetailEntity entity = new ActualPartyRelationshipDetailEntity();
+        entity.setActualPartyRelationshipId(1L);
+        entity.setTargetActualPartyId(1L);
+        entity.setActualHearingParty(actualHearingPartyEntity);
+        return entity;
+    }
+
+    public static ActualHearingDayEntity actualHearingDayEntity(PartyType partyType) {
+        ActualHearingDayEntity entity = new ActualHearingDayEntity();
+        entity.setHearingDate(LocalDate.of(2000, 01, 01));
+        entity.setStartDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
+        entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
+        entity.setActualHearingDayPauses(Arrays.asList(actualHearingDayPausesEntity()));
+        entity.setActualHearingParty(Arrays.asList(actualHearingPartyEntity(partyType)));
+        return entity;
+    }
+
+    public static ActualHearingDayPausesEntity actualHearingDayPausesEntity() {
+        ActualHearingDayPausesEntity entity = new ActualHearingDayPausesEntity();
+        entity.setPauseDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
+        entity.setResumeDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
+        return entity;
+    }
+
+    public static ActualHearingPartyEntity actualHearingPartyEntity(PartyType partyType) {
+        ActualHearingPartyEntity entity = new ActualHearingPartyEntity();
+        entity.setActualPartyId(1L);
+        entity.setPartyId("1");
+        entity.setActualPartyRoleType("roleType");
+        entity.setDidNotAttendFlag(false);
+        entity.setActualAttendeeIndividualDetail(Arrays.asList(actualAttendeeIndividualDetailEntity(partyType)));
+        entity.setActualPartyRelationshipDetail(Arrays.asList(actualPartyRelationshipDetailEntity(entity)));
+        return entity;
+    }
+
+    public static ActualAttendeeIndividualDetailEntity actualAttendeeIndividualDetailEntity(PartyType partyType) {
+        ActualAttendeeIndividualDetailEntity entity = new ActualAttendeeIndividualDetailEntity();
+        if (PartyType.IND.equals(partyType)) {
+            entity.setFirstName("firstName");
+            entity.setLastName("lastName");
+        } else {
+            entity.setPartyOrganisationName("partyOrgName");
+        }
+        entity.setPartyActualSubChannelType("partySubChannel");
+        return entity;
+    }
+
+    public static HearingResponseEntity hearingResponseEntity() {
+        HearingResponseEntity entity = new HearingResponseEntity();
+        entity.setRequestVersion(1);
+        entity.setRequestTimeStamp(LocalDateTime.parse("2020-08-10T12:20:00"));
+        entity.setHearingResponseId(2L);
+        entity.setRequestVersion(10);
+        entity.setListingStatus(ListingStatus.FIXED.name());
+        entity.setListingCaseStatus(ListAssistCaseStatus.CASE_CREATED.name());
+        entity.setCancellationReasonType("Cancelled Reason 1");
+        entity.setHearingDayDetails(Arrays.asList(hearingDayDetailsEntity()));
+        return entity;
+    }
+
+    public static HearingResponseEntity hearingResponseEntity(Integer version, Integer requestVersion,
+                                                              LocalDateTime requestTimestamp,
+                                                              List<HearingDayDetailsEntity> hearingDayDetailsEntities) {
+        HearingResponseEntity entity = new HearingResponseEntity();
+        entity.setResponseVersion(version);
+        entity.setRequestVersion(requestVersion);
+        entity.setRequestTimeStamp(requestTimestamp);
+        entity.setHearingResponseId(2L);
+        entity.setListingStatus(ListingStatus.FIXED.name());
+        entity.setListingCaseStatus(ListAssistCaseStatus.CASE_CREATED.name());
+        entity.setCancellationReasonType("Cancelled Reason 1");
+        entity.setHearingDayDetails(hearingDayDetailsEntities);
+        return entity;
+    }
+
+    public static HearingDayDetailsEntity hearingDayDetailsEntity() {
+        HearingDayDetailsEntity entity = new HearingDayDetailsEntity();
+        entity.setStartDateTime(LocalDateTime.of(2000, 8, 10, 12, 20));
+        entity.setEndDateTime(LocalDateTime.of(2000, 8, 10, 12, 20));
+        entity.setRoomId("roomId");
+        entity.setListAssistSessionId("sessionId");
+        entity.setVenueId("venueId");
+
+        HearingAttendeeDetailsEntity attendee = new HearingAttendeeDetailsEntity();
+        entity.setHearingAttendeeDetails(List.of(attendee));
+        return entity;
+    }
+
+    public static HearingDayDetailsEntity hearingDayDetailsEntity(LocalDateTime startDateTime) {
+        HearingDayDetailsEntity entity = new HearingDayDetailsEntity();
+        entity.setStartDateTime(startDateTime);
+        entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
+        entity.setVenueId("venue1");
+        entity.setRoomId("room1");
+        entity.setListAssistSessionId("session1");
+        return entity;
+    }
+
+    public static HearingPartyEntity hearingPartyEntityOrg() {
+        HearingPartyEntity entity = new HearingPartyEntity();
+        entity.setPartyReference("reference");
+        entity.setPartyType(PartyType.ORG);
+        entity.setPartyRoleType("role");
+        entity.setUnavailabilityEntity(List.of(unavailabilityEntity()));
+        entity.setOrganisationDetailEntity(organisationDetailEntity());
+
+        return entity;
+    }
+
+    public static HearingPartyEntity hearingPartyEntityInd() {
+        HearingPartyEntity entity = new HearingPartyEntity();
+        entity.setPartyReference("reference");
+        entity.setPartyType(PartyType.IND);
+        entity.setPartyRoleType("role");
+        entity.setIndividualDetailEntity(List.of(individualDetailEntity()));
+        return entity;
+    }
+
+    private static CaseHearingRequestEntity caseHearingRequestEntityWithPartyOrg() {
+        CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
+        entity1.setVersionNumber(1);
+        entity1.setCaseHearingID(2000000000L);
+        entity1.setHmctsServiceCode("ABA1");
+        entity1.setCaseReference("12345");
+        entity1.setHearingType("Some hearing type");
+        return entity1;
+    }
+
+    private static CaseHearingRequestEntity caseHearingRequestEntityWithPartyInd() {
+        CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
+        entity1.setVersionNumber(1);
+        entity1.setCaseHearingID(2000000000L);
+
+        entity1.setHearing(getCaseHearingsEntity());
+        entity1.setHmctsServiceCode("ABA1");
+        entity1.setCaseReference("12345");
+        entity1.setHearingType("Some hearing type");
+        entity1.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
+        entity1.getHearing().getHearingResponses().get(0)
+            .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
+        entity1.setHearingParties(List.of(hearingPartyEntityInd()));
+        return entity1;
+    }
+
+    public static UpdateHearingRequest updateHearingRequestWithPartyDetails() {
+        RequestDetails requestDetails = new RequestDetails();
+        requestDetails.setVersionNumber(1);
+        UpdateHearingRequest request = new UpdateHearingRequest();
+        request.setRequestDetails(requestDetails);
+        request.setHearingDetails(hearingDetailsWithAllFields());
+        request.setCaseDetails(caseDetails());
+        request.setPartyDetails(partyDetailsWith2Parties());
+
+        return request;
+    }
+
+    private static List<PartyDetails> partyDetailsWith2Parties() {
+        PartyDetails partyDetails1 = new PartyDetails();
+        partyDetails1.setPartyID("P1");
+        partyDetails1.setPartyType("ind");
+        partyDetails1.setPartyRole("DEF");
+        partyDetails1.setIndividualDetails(allIndividualDetails());
+        partyDetails1.setUnavailabilityDow(unavAilabilityDowDetails());
+        partyDetails1.setUnavailabilityRanges(unAvailabilityRanges());
+
+        PartyDetails partyDetails2 = new PartyDetails();
+        partyDetails2.setPartyID("P2");
+        partyDetails2.setPartyType("IND");
+        partyDetails2.setPartyRole("DEF2");
+        partyDetails2.setOrganisationDetails(organisationDetails());
+
+        List<PartyDetails> partyDetails = List.of(partyDetails1, partyDetails2);
+        return partyDetails;
+    }
+
+    private static List<UnavailabilityRanges> unAvailabilityRanges() {
+        UnavailabilityRanges detail1 = new UnavailabilityRanges();
+        detail1.setUnavailableFromDate(LocalDate.parse("2021-10-20"));
+        detail1.setUnavailableToDate(LocalDate.parse("2021-12-31"));
+        detail1.setUnavailabilityType("All Day");
+        UnavailabilityRanges detail2 = new UnavailabilityRanges();
+        detail2.setUnavailableFromDate(LocalDate.parse("2030-10-20"));
+        detail2.setUnavailableToDate(LocalDate.parse("2030-10-22"));
+        detail2.setUnavailabilityType("All Day");
+        List<UnavailabilityRanges> unavailabilityRanges = List.of(detail1, detail2);
+        return unavailabilityRanges;
+    }
+
+    private static List<UnavailabilityDow> unavAilabilityDowDetails() {
+        UnavailabilityDow detail1 = new UnavailabilityDow();
+        detail1.setDowUnavailabilityType("PM");
+        detail1.setDow("MONDAY");
+        UnavailabilityDow detail2 = new UnavailabilityDow();
+        detail2.setDowUnavailabilityType("All Day");
+        detail2.setDow("THURSDAY");
+        List<UnavailabilityDow> unavailabilityDows = List.of(detail1, detail2);
+        return unavailabilityDows;
+    }
+
+    public static HearingDetails hearingDetailsWithAllFields() {
+        HearingDetails hearingDetails = new HearingDetails();
+        hearingDetails.setAutoListFlag(true);
+        hearingDetails.setHearingType("Some hearing type");
+        HearingWindow hearingWindow = new HearingWindow();
+        hearingWindow.setDateRangeEnd(LocalDate.parse("2017-03-01"));
+        hearingWindow.setDateRangeStart(LocalDate.parse("2017-03-01"));
+        hearingDetails.setHearingWindow(hearingWindow);
+        hearingDetails.setDuration(60);
+        hearingDetails.setNonStandardHearingDurationReasons(Arrays.asList("First reason", "Second reason"));
+        hearingDetails.setHearingPriorityType("Priority type");
+        hearingDetails.setNumberOfPhysicalAttendees(4);
+        hearingDetails.setHearingInWelshFlag(false);
+        HearingLocation location1 = new HearingLocation();
+        location1.setLocationId("COURT");
+        location1.setLocationType("Court");
+        List<HearingLocation> hearingLocations = new ArrayList<>();
+        hearingLocations.add(location1);
+        hearingDetails.setHearingLocations(hearingLocations);
+        hearingDetails.setFacilitiesRequired(Arrays.asList("facility1", "facility2"));
+        hearingDetails.setListingComments("Some listing comments");
+        hearingDetails.setHearingRequester("Some judge");
+        hearingDetails.setPrivateHearingRequiredFlag(false);
+        hearingDetails.setLeadJudgeContractType("AB123");
+        hearingDetails.setPanelRequirements(TestingUtil.panelRequirements());
+        hearingDetails.getPanelRequirements().setPanelPreferences(TestingUtil.panelPreferences());
+        hearingDetails.getPanelRequirements().setPanelSpecialisms(Arrays.asList("Specialism 1"));
+        hearingDetails.setHearingIsLinkedFlag(false);
+        hearingDetails.setPanelRequirements(panelRequirementsList());
+        return hearingDetails;
+    }
+
+    public static PanelRequirements panelRequirementsList() {
+        PanelRequirements panelRequirements = new PanelRequirements();
+        panelRequirements.setRoleType(Arrays.asList("RoleType1","RoleType2"));
+        panelRequirements.setAuthorisationTypes(Arrays.asList("AuthorisationType1","AuthorisationType2"));
+        panelRequirements.setAuthorisationSubType(Arrays.asList("AuthorisationSubType2","AuthorisationSubType2"));
+        return panelRequirements;
+    }
+
+    public static List<PanelPreference> panelPreferences() {
+        PanelPreference panelPreference = new PanelPreference();
+        panelPreference.setRequirementType("MUSTINC");
+        panelPreference.setMemberType("Member type 1");
+        panelPreference.setMemberID("MID123");
+        PanelPreference panelPreferenceTwo = new PanelPreference();
+        panelPreferenceTwo.setRequirementType("OPTINC");
+        panelPreferenceTwo.setMemberType("Member type 2");
+        panelPreferenceTwo.setMemberID("MID999");
+        List<PanelPreference> panelPreferences = Arrays.asList(panelPreference, panelPreferenceTwo);
+        return panelPreferences;
+    }
+
+    public static IndividualDetails allIndividualDetails() {
+        IndividualDetails individualDetails = new IndividualDetails();
+        individualDetails.setTitle("Mrs");
+        individualDetails.setFirstName("Rosie");
+        individualDetails.setLastName("Jason");
+        individualDetails.setPreferredHearingChannel("channel 5");
+        individualDetails.setInterpreterLanguage("French");
+        individualDetails.setReasonableAdjustments(Arrays.asList("Adjust1","Adjust2","Adjust3"));
+        individualDetails.setVulnerableFlag(false);
+        individualDetails.setVulnerabilityDetails("More vulnerable");
+        individualDetails.setHearingChannelPhone("01111111111");
+        individualDetails.setHearingChannelEmail("hearing.channel_udated@email.com");
+        List<RelatedParty> relatedParties = new ArrayList<>();
+        RelatedParty relatedParty1 = new RelatedParty();
+        relatedParty1.setRelatedPartyID("Party1");
+        relatedParty1.setRelationshipType("Mother");
+        relatedParties.add(relatedParty1);
+        RelatedParty relatedParty2 = new RelatedParty();
+        relatedParty2.setRelatedPartyID("Party2");
+        relatedParty2.setRelationshipType("Father");
+        relatedParties.add(relatedParty2);
+        individualDetails.setRelatedParties(relatedParties);
+        return individualDetails;
+    }
+
+    public static LocalDateTime convertDateTime(String dateStr) {
+        DateTimeFormatter format = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+        return LocalDateTime.parse(dateStr, format);
     }
 
     public static HearingActual hearingActualWithDuplicatedHearingDate() {
@@ -414,20 +917,20 @@ public class TestingUtil {
         )));
 
         actualHearingDay.setActualDayParties(List.of(
-            actualHearingParty("123", "43333", actualHearingPartyDetails("WitnessForeName1", "WitnessLastName1"),
+            actualHearingParty(123L, "43333", actualHearingPartyDetails("WitnessForeName1", "WitnessLastName1"),
                                "claiming party", false)
         ));
         return actualHearingDay;
     }
 
-    private static ActualHearingDayParties actualHearingParty(String partyId,
+    private static ActualHearingDayParties actualHearingParty(Long partyId,
                                                               String partyRole,
                                                               ActualHearingDayPartyDetail partyDetail,
                                                               String partyChannelSubType,
                                                               Boolean didNotAttendFlag) {
         ActualHearingDayParties parties = new ActualHearingDayParties();
 
-        parties.setActualPartyId(partyId);
+        parties.setActualPartyId(partyId.toString());
         parties.setPartyRole(partyRole);
         parties.setIndividualDetails(partyDetail);
         parties.setPartyChannelSubType(partyChannelSubType);
@@ -451,199 +954,5 @@ public class TestingUtil {
         return pauseDayTime;
     }
 
-    public static CaseHearingRequestEntity getCaseHearingsEntities() {
-        CaseHearingRequestEntity entity = new CaseHearingRequestEntity();
-        HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
-        entity.setCaseHearingID(2000000000L);
-        hearingEntity.setStatus("HEARING_REQUESTED");
-        entity.setHearing(hearingEntity);
-        entity.setHmctsServiceCode("ABA1");
-        entity.setCaseReference("12345");
-        entity.setHearingRequestReceivedDateTime(LocalDateTime.parse("2000-08-10T12:20:00"));
-        entity.setHearingType("Some hearing type");
-        entity.getHearing().setHearingResponses(Arrays.asList(hearingResponseEntity()));
-        entity.getHearing().getHearingResponses().get(0)
-            .setHearingDayDetails(Arrays.asList(hearingDayDetailsEntity()));
-        return entity;
-    }
-
-
-    public static List<NonStandardDurationsEntity> getNonStandardDurationEntities() {
-        NonStandardDurationsEntity nonStandardDurationsEntity = new NonStandardDurationsEntity();
-        nonStandardDurationsEntity.setNonStandardHearingDurationReasonType("Reason");
-        return Arrays.asList(nonStandardDurationsEntity);
-    }
-
-    public static List<CaseHearingRequestEntity> getCaseHearingsEntitiesWithStatus() {
-        List<CaseHearingRequestEntity> entities = new ArrayList<>();
-        getFirstEntity(entities);
-        getSecondEntity(entities);
-        return entities;
-    }
-
-    private static void getFirstEntity(List<CaseHearingRequestEntity> entities) {
-        CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
-        HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
-        entity1.setCaseHearingID(2000000000L);
-        hearingEntity.setStatus("HEARING_REQUESTED");
-        entity1.setHearing(hearingEntity);
-        entity1.setHmctsServiceCode("ABA1");
-        entity1.setCaseReference("12345");
-        entity1.setHearingRequestReceivedDateTime(LocalDateTime.parse("2000-08-10T12:20:00"));
-        entity1.setHearingType("Some hearing type");
-        entity1.getHearing().setHearingResponses(Arrays.asList(hearingResponseEntity()));
-        entity1.getHearing().getHearingResponses().get(0)
-            .setHearingDayDetails(Arrays.asList(hearingDayDetailsEntity()));
-        entities.add(entity1);
-    }
-
-    private static void getSecondEntity(List<CaseHearingRequestEntity> entities) {
-        CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
-        HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000001L);
-        entity1.setCaseHearingID(2000000001L);
-        hearingEntity.setStatus("HEARING_UPDATED");
-        entity1.setHearing(hearingEntity);
-        entity1.setHmctsServiceCode("ABA1");
-        entity1.setCaseReference("4567");
-        entity1.setHearingRequestReceivedDateTime(LocalDateTime.parse("2000-08-10T12:20:00"));
-        entity1.setHearingType("Some hearing type");
-        entity1.getHearing().setHearingResponses(Arrays.asList(hearingResponseEntity()));
-        entity1.getHearing().getHearingResponses().get(0)
-            .setHearingDayDetails(Arrays.asList(hearingDayDetailsEntity()));
-        entities.add(entity1);
-    }
-
-    public static HearingDayDetailsEntity hearingDayDetailsEntity(LocalDateTime startDateTime) {
-        HearingDayDetailsEntity entity = new HearingDayDetailsEntity();
-        entity.setStartDateTime(startDateTime);
-        entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
-        entity.setVenueId("venue1");
-        entity.setRoomId("room1");
-        entity.setListAssistSessionId("session1");
-        entity.setHearingAttendeeDetails(Arrays.asList(hearingAttendeeDetailsEntity()));
-        entity.setHearingDayPanel(Arrays.asList(hearingDayPanelEntities()));
-        return entity;
-    }
-
-    public static HearingDayDetailsEntity hearingDayDetailsEntity() {
-        return hearingDayDetailsEntity(LocalDateTime.parse("2020-08-10T12:20:00"));
-    }
-
-    public static HearingDayPanelEntity hearingDayPanelEntities() {
-        HearingDayPanelEntity entity = new HearingDayPanelEntity();
-        entity.setPanelUserId("PanelUser1");
-        entity.setIsPresiding(false);
-        return entity;
-    }
-
-    public static HearingAttendeeDetailsEntity hearingAttendeeDetailsEntity() {
-        HearingAttendeeDetailsEntity entity = new HearingAttendeeDetailsEntity();
-        entity.setPartyId("Party1");
-        entity.setPartySubChannelType("SubChannel1");
-        return entity;
-    }
-
-    public static GetHearingsResponse getHearingsResponseWhenNoData(String caseRef) {
-        GetHearingsResponse getHearingsResponse = new GetHearingsResponse();
-        getHearingsResponse.setCaseRef(caseRef);
-        getHearingsResponse.setCaseHearings(new ArrayList<>());
-        return getHearingsResponse;
-    }
-
-    public static HearingEntity getCaseHearingsEntity(PartyType partyType) {
-        HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
-        hearingEntity.setStatus("HEARING_REQUESTED");
-        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
-        if (partyType.getLabel() == PartyType.IND.getLabel()) {
-            hearingEntity.setCaseHearingRequest(caseHearingRequestEntityWithPartyOrg());
-        } else {
-            hearingEntity.setCaseHearingRequest(caseHearingRequestEntityWithPartyInd());
-        }
-        hearingEntity.getCaseHearingRequest().setVersionNumber(1);
-        return hearingEntity;
-    }
-
-    public static HearingEntity getCaseHearingsEntity() {
-        HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
-        hearingEntity.setStatus("HEARING_REQUESTED");
-        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
-        hearingEntity.setCaseHearingRequest(caseHearingRequestEntityWithPartyOrg());
-
-        hearingEntity.getCaseHearingRequest().setVersionNumber(1);
-        hearingEntity.getCaseHearingRequest().setHearingParties(Arrays.asList(hearingPartyEntityOrg()));
-        return hearingEntity;
-    }
-
-    public static HearingResponseEntity hearingResponseEntity() {
-        return hearingResponseEntity("1", "1", LocalDateTime.parse("2020-08-10T12:20:00"),
-                                     List.of(hearingDayDetailsEntity()));
-    }
-
-    public static HearingResponseEntity hearingResponseEntity(String version, String requestVersion,
-                                                              LocalDateTime requestTimestamp,
-                                                              List<HearingDayDetailsEntity> hearingDayDetailsEntities) {
-        HearingResponseEntity entity = new HearingResponseEntity();
-        entity.setResponseVersion(version);
-        entity.setRequestVersion(requestVersion);
-        entity.setRequestTimeStamp(requestTimestamp);
-        entity.setHearingResponseId(2L);
-        entity.setListingStatus("listingStatus");
-        entity.setListingCaseStatus("Case_listingStatus");
-        entity.setHearingDayDetails(hearingDayDetailsEntities);
-        return entity;
-    }
-
-    public static HearingPartyEntity hearingPartyEntityOrg() {
-        HearingPartyEntity entity = new HearingPartyEntity();
-        entity.setPartyReference("reference");
-        entity.setPartyType(PartyType.ORG);
-        entity.setPartyRoleType("role");
-        entity.setUnavailabilityEntity(Arrays.asList(unavailabilityEntity()));
-        entity.setOrganisationDetailEntity(organisationDetailEntity());
-
-        return entity;
-    }
-
-    public static HearingPartyEntity hearingPartyEntityInd() {
-        HearingPartyEntity entity = new HearingPartyEntity();
-        entity.setPartyReference("reference");
-        entity.setPartyType(PartyType.IND);
-        entity.setPartyRoleType("role");
-        entity.setIndividualDetailEntity(Arrays.asList(individualDetailEntity()));
-
-        return entity;
-    }
-
-    private static CaseHearingRequestEntity caseHearingRequestEntityWithPartyOrg() {
-        CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
-        entity1.setCaseHearingID(2000000000L);
-        entity1.setHmctsServiceCode("ABA1");
-        entity1.setCaseReference("12345");
-        entity1.setHearingRequestReceivedDateTime(LocalDateTime.parse("2000-08-10T12:20:00"));
-        entity1.setHearingType("Some hearing type");
-        return entity1;
-    }
-
-    private static CaseHearingRequestEntity caseHearingRequestEntityWithPartyInd() {
-        CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
-        entity1.setCaseHearingID(2000000000L);
-
-        entity1.setHearing(getCaseHearingsEntity());
-        entity1.setHmctsServiceCode("ABA1");
-        entity1.setCaseReference("12345");
-        entity1.setHearingRequestReceivedDateTime(LocalDateTime.parse("2000-08-10T12:20:00"));
-        entity1.setHearingType("Some hearing type");
-        entity1.getHearing().setHearingResponses(Arrays.asList(hearingResponseEntity()));
-        entity1.getHearing().getHearingResponses().get(0)
-            .setHearingDayDetails(Arrays.asList(hearingDayDetailsEntity()));
-        entity1.setHearingParties(Arrays.asList(hearingPartyEntityInd()));
-
-        return entity1;
-    }
 }
 
